# groovebox

./: .TODO.md.swp  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  run.sh
header/: circle.hpp  image.hpp  mpc.hpp  plot.hpp  sample.hpp  shape.hpp  sprite.hpp
include/: plot.hpp
src/: SineEnv.cpp  SineEnv.hpp  circle.cpp  donda.cpp  gui.cpp  gui.hpp  image.cpp  main.cpp  mpc.cpp  mpc.hpp  other.cpp  plot.cpp  plot.hpp  sample.cpp  sample.hpp  shape.cpp  sprite.cpp  test.cpp  test.hpp  timeline.cpp  timeline.hpp  track.cpp  wav_editor.cpp
